--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@walletconnect/client": "^1.7.0",
 		"algorand-walletconnect-qrcode-modal": "^1.6.1",
 		"algosdk": "^1.14.0",
+		"fast-sha256": "^1.3.0",
 		"firebase": "^9.6.9",
 		"next": "12.0.7",
 		"react": "17.0.2",
